# hddflyzer

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish-to-pypi.yml
docs/: api.md  changelog.md  index.md  usage.md
docs/stylesheets/: extra.css
examples/: valid_metadata_aocd.csv
hddflyzer/: __init__.py  cli.py  version.py
hddflyzer/chem/: __init__.py  feature_curation.py  feature_engineering.py  npclassifier.py  pruning.py  reference_catalog.py  stats.py  tanimoto.py  tanimoto_sampling.py
hddflyzer/config/: __init__.py  descriptor_config.json  settings.py
hddflyzer/data/: __init__.py  registry.py
hddflyzer/dimred/: __init__.py  pca.py  pca_joint.py  pca_utils.py  tsne.py  umap.py
hddflyzer/io/: __init__.py  paths.py  readers.py  writers.py
hddflyzer/pipeline/: __init__.py  contracts.py  orchestrator.py  stages.py
hddflyzer/results/: __init__.py  artifacts.py  workflow_run.py
hddflyzer/science/: __init__.py  metrics.py  spaces.py
hddflyzer/utils/: __init__.py  columns.py  descriptors.py  naming.py
hddflyzer/viz/: __init__.py  colors.py  correlations.py  distributions.py  inputs.py  npclassifier_plots.py  pca_plots.py  similarity.py  tsne_plots.py  umap_plots.py
tests/: test_chem_api.py  test_chem_feature_curation.py  test_chem_feature_engineering.py  test_chem_pruning.py  test_chem_reference_catalog.py  test_chem_stats.py  test_chem_tanimoto.py  test_chem_tanimoto_sampling.py  test_cli.py  test_config.py  test_data.py  test_dimred_pca.py  test_dimred_pca_joint.py  test_dimred_tsne.py  test_dimred_umap.py  test_io.py  test_pipeline.py  test_results_api.py  test_results_artifact_loading.py  test_results_workflow_run.py  test_science_api.py  test_science_metrics.py  test_science_spaces.py  test_utils.py  test_viz.py  test_viz_api.py  test_viz_colors.py  test_viz_inputs.py
