# SPDX-License-Identifier: LGPL-3.0-or-later

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "hddflyzer"
dynamic = ["version"]
description = "Modular pipeline for molecular descriptor analysis, chemical space visualization, and pharmacological similarity of organic compound collections."
readme = "README.md"
license = "LGPL-3.0-or-later"
license-files = ["LICENSE", "COPYING", "COPYING.LESSER"]
authors = [
    { name = "Flavio F. Contreras-Torres", email = "contreras.flavio@tec.mx" },
]
keywords = [
    "cheminformatics",
    "molecular descriptors",
    "chemical space",
    "PCA",
    "t-SNE",
    "UMAP",
    "Tanimoto",
    "drug discovery",
    "natural products",
    "RDKit",
    "computational chemistry",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "requests>=2.28",
    "networkx>=3.0",
    "umap-learn>=0.5",
    "rdkit>=2023.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "build>=1.0",
    "hatchling>=1.18",
    "twine>=4.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage      = "https://github.com/NanoBiostructuresRG/hddflyzer"
Repository    = "https://github.com/NanoBiostructuresRG/hddflyzer"
Issues        = "https://github.com/NanoBiostructuresRG/hddflyzer/issues"
Documentation = "https://nanobiostructuresrg.github.io/hddflyzer/"

[project.scripts]
hddflyzer = "hddflyzer.cli:main"


[tool.hatch.version]
path = "hddflyzer/version.py"

[tool.hatch.build.targets.wheel]
packages = ["hddflyzer"]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.git",
    "/.github",
    "/.mypy_cache",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.venv",
    "/__pycache__",
    "*/__pycache__",
    "*.egg-info",
    "/*.egg-info",
    "/build",
    "/dist",
    "/docs",
    "/mkdocs.yml",
    "/data",
    "/examples",
    "/artifacts",
    "/features",
    "/tanimoto",
    "/npclassifier",
    "/base_correlation",
    "/feature_pruning",
    "/correlation",
    "/pca",
    "/pca2collections",
    "/tsne",
    "/tsne_features",
    "/umap",
    "/umap_pruning",
    "/figures",
    "/site",
    "/htmlcov",
    "/.coverage",
    "*.pyc",
    "*.pyo",
    "*.npy",
    "*.npz",
    "*.pkl",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
tmp_path_retention_count = 0
tmp_path_retention_policy = "none"
